2000-11-05  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Always permit
	BFDs containing no sections to be merged, regardless of their flags.

2000-11-04  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_relocate_section): Suppress error message
	if a relocation for an undefined symbol also results in an
	overflow.

2000-10-31  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Only handle
	EF_SOFT_FLOAT if it is defined.

	From 2000-05-23  H.J. Lu  <hjl@gnu.org>
	* elf32-ppc.c (ppc_elf_relocate_section): Fix a typo.

2000-10-27  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_copy_private_bfd_data): Don't refuse
	attempts to mix PIC code with non-PIC, just mark the output as
	being position dependent.
	(elf32_arm_merge_private_bfd_data): Likewise.  Print an error 
	message for EF_SOFT_FLOAT mismatches.  Display diagnostics for 
	all mismatches, not just the first one.
	
2000-10-23  Philip Blundell  <pb@futuretv.com>

	From 2000-05-23  H.J. Lu  <hjl@gnu.org>
	* elf64-alpha.c (elf64_alpha_relocate_section): Check
	h->root.other not h->other.
	* elf32-mips.c (mips_elf_calculate_relocation): Likewise.

2000-10-23  Philip Blundell  <pb@futuretv.com>

	* elf32-arm.h (elf32_arm_finish_dynamic_symbol): Undo previous
	accidental checkin.

2000-10-22  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_finish_dynamic_symbol): Don't make 
	PLT entries that could serve as a definition for a weak symbol.

	From 2000-06-05  H.J. Lu  <hjl@gnu.org>
	* elflink.c (_bfd_elf_link_record_dynamic_symbol): Don't flag
	an error when seeing an undefined symbol with hidden/internal
	attribute. It is handled in *_relocate_section ().

	From 2000-05-23  H.J. Lu  <hjl@gnu.org>
	* elf32-i386.c (elf_i386_relocate_section): Don't allow the
	undefined symbol with the non-default visibility attributes.
	* elf-hppa.h (elf_hppa_relocate_section): Likewise.